--- a/views/new.erb
+++ b/views/new.erb
@@ -1,13 +1,13 @@
-<h1>Comment on <a href="https://github.com/<%= owner %>/<%= repo %>"><%= owner %>/<%= repo %></a></h1>
+<h1><a href="https://github.com/<%= owner %>/<%= repo %>"><%= owner %>/<%= repo %></a>にコメントします</h1>
 <div class="row">
   <div class="col-md-12">
     <form method="POST" role="form">
       <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" id="title" name="title" value="<%= title %>" class="form-control" placeholder="A brief description of your comment" />
+        <input type="text" id="title" name="title" value="<%= title %>" class="form-control" placeholder="あなたのコメントの簡単な説明" />
       </div>
       <div class="form-group">
-        <label for="body">Comment</label>
+        <label for="body">コメント</label>
         <textarea name="body" class="form-control" style="height: 300px; "><%= body %></textarea>
       </div>
       <% if guest_submissions_enabled %>
@@ -15,23 +15,23 @@
           <div class="col-sm-4 guest">
             <div class="form-group">
               <input type="text" id="name" name="name" class="form-control" value="<%= name %>" placeholder="Your name" />
-              <button type="submit" class="btn btn-default" name="type" value="guest">Submit as a Guest</button>
+              <button type="submit" class="btn btn-default" name="type" value="guest">ゲストとして提出</button>
             </div>
           </div>
           <div class="col-sm-8">
             <div class="pick-me">
-              ...or <button class="btn btn-primary" type="submit" name="type" value="github">
+              ...または <button class="btn btn-primary" type="submit" name="type" value="github">
                 <% if github_user %>
-                  submit as @<%= github_user.login %>
+                  @<%= github_user.login %> として提出
                 <% else %>
-                  log in with GitHub
+                GitHubのを使用してログイン
                 <% end %>
-              </button> to comment and receive updates
+              </button> コメントやアップデートを受信します
             </div>
           </div>
         </div>
       <% else %>
-        <button type="submit" class="btn btn-primary" name="type" value="github">Submit</button>
+        <button type="submit" class="btn btn-primary" name="type" value="github">提出します</button>
       <% end %>
     </form>
   </div>
