--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Comment Card</title>
+    <title>コメントカード</title>
 
     <!-- Bootstrap -->
     <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
       <%= yield %>
 
       <footer>
-        <a href="http://ben.balter.com">@benbalter</a> | <a href="https://github.com/benbalter/comment-card">source</a>
+        <a href="http://ben.balter.com">@benbalter</a> | <a href="https://github.com/benbalter/comment-card">ソース</a>
       </footer>
     </div>
 
