--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
   <div class="col-md-12">
     <form method="POST" role="form">
       <div class="form-group">
-        <label for="title">Title</label>
+        <label for="title">タイトル</label>
         <input type="text" id="title" name="title" value="<%= title %>" class="form-control" placeholder="あなたのコメントの簡単な説明" />
       </div>
       <div class="form-group">
