update to JP trans on new.erb

--- a/views/new.erb
+++ b/views/new.erb
@@ -4,7 +4,7 @@
     <form method="POST" role="form">
       <div class="form-group">
         <label for="title">タイトル</label>
-        <input type="text" id="title" name="title" value="<%= title %>" class="form-control" placeholder="あなたのコメントの簡単な説明" />
+        <input type="text" id="title" name="title" value="<%= title %>" class="form-control" placeholder="コメントの短い紹介" />
       </div>
       <div class="form-group">
         <label for="body">コメント</label>
