--- a/views/new.erb
+++ b/views/new.erb
@@ -26,7 +26,7 @@
                 <% else %>
                 GitHubのを使用してログイン
                 <% end %>
-              </button> コメントやアップデートを受信します
+              </button>すればコメントやアップデートの通知が送られます。
             </div>
           </div>
         </div>
