--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,7 +1,7 @@
 <h1>より良い <%= owner %>/<%= repo %> を作るためにご協力いただきありがとうございます</h1>
 
-<p class="lead">あなたのコメントは問題<a href="<%= issue.html_url %>">＃1</a>であります</p>
+<p class="lead">あなたのコメントはissue<a href="<%= issue.html_url %>">＃1</a>です。</p>
 
-<p>あなたはできます<a href="<%= issue.html_url %>">そのステータスを追跡するために一緒に従います</a>, または <a href="https://github.com/<%= owner %>/<%= repo %>/issues">未解決の問題の一覧を参照</a></p>
+<p>コメントの<a href="<%= issue.html_url %>">ステータスを確認</a>, または <a href="https://github.com/<%= owner %>/<%= repo %>/issues">未解決の問題の一覧を参照</a>。</p>
 
 <p class="uno-mas"><a href="/<%= owner %>/<%= repo %>/issues/new">別のコメントを提出</a>?</p>
